--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "joi": "^17.12.2",
-    "mongoose": "^8.0.1"
+    "mongoose": "^8.0.1",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0"
   }
 }
