--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "name": "majorproject",
   "version": "1.0.0",
   "description": "",
@@ -10,13 +13,18 @@
   "author": "Kavya Rajput",
   "license": "ISC",
   "dependencies": {
+    "cloudinary": "^2.1.0",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "joi": "^17.12.2",
     "mongoose": "^8.0.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0"
